--- a/index.html
+++ b/index.html
@@ -3,29 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linha do Tempo - Surpresa</title>
+    <title>Surpresa para Você ❤️</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Surpresa para Você ❤️</h1>
-    <div class="timeline">
-        <div class="event">
-            <img src="img/foto1.jpg" alt="Primeiro momento">
-            <p>Nosso primeiro encontro, um dia inesquecível!</p>
-        </div>
-        <div class="event">
-            <img src="img/foto2.jpg" alt="Viagem">
-            <p>Aquela viagem maravilhosa que fizemos juntos!</p>
-        </div>
-        <div class="event">
-            <img src="img/foto3.jpg" alt="Momento especial">
-            <p>Um dos momentos mais felizes da nossa história!</p>
-        </div>
-    </div>
+    <div class="container">
+        <h1>Surpresa para Você ❤️</h1>
 
-    <div class="qr-container">
-        <p>Escaneie o QR Code para uma surpresa especial!</p>
-        <img src="img/qrcode.png" alt="QR Code">
-    </div>
-</body>
-</html>
+        <div class="timeline">
+            <div class="event">
+                <img src="img/foto1.jpg" alt="Primeiro momento">
+                <h2>Primeiro momento</h2>
+                <p>Nosso primeiro encontro, um dia inesquecível!</p>
+            </div>
+
+            <div class="event">
+                <img src="img/foto2.jpg" alt="Viagem">
+                <h2>Viagem</h2>
+                <p>Aquela viagem maravilhosa que fizemos juntos!</p>
+            </div>
+
+            <div class="event">
+                <img src="img/foto3.jpg" alt="Momento especial">
+                <h2>Momento especial</h2>
+                <p>Um dos momentos mais felizes da nossa história!</p>
+            </div>
+        </div>
+
+        <div class="qr-container">
+            <p>Escaneie o QR Code para uma surpresa especial!</p>
+            <img src="img
