--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <div class="timeline">
             <div class="event">
-                <img src="img/foto1.jpg" alt="Primeiro momento">
+                <img src="https://github.com/DeelYong/surpresa-noiva/blob/main/foto1.jpg" alt="Primeiro momento">
                 <h2>Primeiro momento</h2>
                 <p>Nosso primeiro encontro, um dia inesquecível!</p>
             </div>
