--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             </div>
 
             <div class="event">
-                <img src="img/foto2.jpg" alt="Viagem">
+                <img src="https://raw.githubusercontent.com/DeelYong/surpresa-noiva/main/img/foto2.jpg" alt="Viagem">
                 <h2>Viagem</h2>
                 <p>Aquela viagem maravilhosa que fizemos juntos!</p>
             </div>
 
             <div class="event">
-                <img src="img/foto3.jpg" alt="Momento especial">
+                <img src="https://raw.githubusercontent.com/DeelYong/surpresa-noiva/main/img/foto3.jpg" alt="Momento especial">
                 <h2>Momento especial</h2>
                 <p>Um dos momentos mais felizes da nossa história!</p>
             </div>
@@ -32,4 +32,8 @@
 
         <div class="qr-container">
             <p>Escaneie o QR Code para uma surpresa especial!</p>
-            <img src="img
+            <img src="https://raw.githubusercontent.com/DeelYong/surpresa-noiva/main/img/qr_code.jpg" alt="QR Code">
+        </div>
+    </div>
+</body>
+</html>
