--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </div>
     </div>
 
+    <!-- Conectando o arquivo JavaScript -->
     <script src="script.js"></script>
 </body>
 </html>
