--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
                 <p>Nosso primeiro encontro, um dia inesquecível!</p>
                 <button class="next-btn" onclick="nextEvent(2)">➡️</button>
             </div>
+            <div class="event" id="event2">
+                <img src="https://github.com/DeelYong/surpresa-noiva/blob/main/img/foto2.jpg" alt="Primeiro momento">
+                <p>Nosso primeiro encontro, um dia inesquecível!</p>
+                <button class="next-btn" onclick="nextEvent(2)">➡️</button>
+            </div>
             <!-- Adicione eventos semelhantes para foto2 a foto9 -->
             <div class="event" id="event10">
                 <img src="https://raw.githubusercontent.com/DeelYong/surpresa-noiva/main/img/foto10.jpg" alt="Última foto">
