--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
                 <p>Nosso primeiro encontro, um dia inesquecível!</p>
                 <button class="next-btn" onclick="nextEvent(2)">➡️</button>
             </div>
-            <div class="event" id="event2">
-                <img src="https://github.com/DeelYong/surpresa-noiva/blob/main/img/foto2.jpg" alt="Primeiro momento">
-                <p>Nosso primeiro encontro, um dia inesquecível!</p>
-                <button class="next-btn" onclick="nextEvent(2)">➡️</button>
+            <div class="event" id="event2" style="display: none;">
+                <img src="https://raw.githubusercontent.com/DeelYong/surpresa-noiva/main/img/foto2.jpg" alt="Viagem">
+                <p>Aquela viagem maravilhosa que fizemos juntos!</p>
+                <button class="next-btn" onclick="nextEvent(3)">➡️</button>
             </div>
-            <!-- Adicione eventos semelhantes para foto2 a foto9 -->
-            <div class="event" id="event10">
+            <!-- Adicione mais eventos para as fotos 3 a 9 -->
+            <div class="event" id="event10" style="display: none;">
                 <img src="https://raw.githubusercontent.com/DeelYong/surpresa-noiva/main/img/foto10.jpg" alt="Última foto">
                 <p>O grande dia! Nosso amor sempre será eterno.</p>
                 <video controls>
