--- a/index.html
+++ b/index.html
@@ -59,8 +59,12 @@
                 </div>
                 <div class="modal-body">
                     <div class="photo-grid" id="photoGrid">
-                        <!-- Slots de fotos serão gerados via JavaScript -->
+                        <!-- Slots serão gerados via JavaScript -->
                     </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                    <button type="button" class="btn btn-primary" id="saveChanges">Salvar Alterações</button>
                 </div>
             </div>
         </div>
