--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
-                    <div class="photo-grid" id="photoGrid">
-                        <!-- Slots serão gerados via JavaScript -->
+                    <div id="photoGrid" class="photo-grid">
+                        <!-- Cards serão inseridos aqui via JavaScript -->
                     </div>
                 </div>
                 <div class="modal-footer">
